checked annotation_workflows

--- a/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
+++ b/docs/_source/practical_guides/annotation_workflows/semantic_search.ipynb
@@ -14,20 +14,20 @@
     "\n",
     "Warning\n",
     "    \n",
-    "The `FeedbackDataset` does not offer support for semantic search as of now. If you would like to use it, you will need to use one of the other datasets. To get more info about the dataset differences, you can have a look at [here](/practical_guides/choose_dataset.html).\n",
+    "The `FeedbackDataset` does not offer support for semantic search as of now. If you would like to use it, you will need to use one of the other datasets. To get more info about the dataset differences, you can have a look [here](../../practical_guides/choose_dataset.md).\n",
     "    \n",
     "</div>\n",
     "\n",
     "\n",
     "## Other datasets\n",
     "\n",
-    "This guide gives an overview of the semantic search features. Since `1.2.0` Argilla supports adding vectors to Argilla records which can then be used for finding the most similar records to a given one. This feature uses vector or semantic search combined with more traditional search (keyword and filter based). \n",
+    "This guide gives an overview of the semantic search features. Since `1.2.0` Argilla supports adding vectors to Argilla records which can then be used for finding the most similar records to a given one. This feature uses vector or semantic search combined with more traditional search (keyword and filter-based). \n",
     "\n",
     "Vector search leverages machine learning to capture rich semantic features by embedding items (text, video, images, etc.) into a vector space, which can be then used to find \"semantically\" similar items.\n",
     "\n",
     "In this guide, you'll find how to:\n",
     "\n",
-    "- Setup your Elasticsearch or Opensearch endpoint with vector search support.\n",
+    "- Set up your Elasticsearch or Opensearch endpoint with vector search support.\n",
     "- Encode text into vectors for Argilla records.\n",
     "- Use semantic search.\n",
     "\n",
@@ -42,7 +42,7 @@
     ")\n",
     "```\n",
     "\n",
-    "The next section gives a general overview about how semantic search works in Argilla."
+    "The next section gives a general overview of how semantic search works in Argilla."
    ]
   },
   {
@@ -54,7 +54,7 @@
     "### How it works\n",
     "Semantic search in Argilla works as follows:\n",
     "\n",
-    "1. One or several vectors can be included in the `vectors` field of Argilla Records. The `vectors` field accepts a dictionary where `keys` represent names and `values` the actual vectors. This is the case because certain use cases might require using several vectors. \n",
+    "1. One or several vectors can be included in the `vectors` field of Argilla Records. The `vectors` field accepts a dictionary where `keys` represent the names and `values` of the actual vectors. This is the case because certain use cases might require using several vectors. \n",
     "2. The vectors are stored at indexing time, once the records are logged with `rg.log`. \n",
     "3. If you have stored vectors in your dataset, you can use the semantic search feature in Argilla UI or the `vector` param in the `rg.load` method of the Python Client.\n",
     "\n",
@@ -65,9 +65,9 @@
     "\n",
     "Note\n",
     "    \n",
-    "It's completely up to the user which encoding or embedding mechanism to use for producing these vectors. In the \"Encode text fields\" section of this document you will find several examples and details about this process, using open source libraries (e.g., Hugging Face) as well as paid services (e.g., Cohere or OpenAI).\n",
+    "It's completely up to the user which encoding or embedding mechanism to use for producing these vectors. In the \"Encode text fields\" section of this document you will find several examples and details about this process, using open-source libraries (e.g., Hugging Face) as well as paid services (e.g., Cohere or OpenAI).\n",
     "\n",
-    "Currently, Argilla uses vector search only for searching similar records (nearest neighbours) of a given vector. This can be leveraged from Argilla UI as well as the Python Client. In the future, vector search could be leveraged as well for free text queries using Argilla UI.\n",
+    "Currently, Argilla uses vector search only for searching similar records (nearest neighbors) of a given vector. This can be leveraged from Argilla UI as well as the Python Client. In the future, vector search could be leveraged as well for free text queries using Argilla UI.\n",
     "    \n",
     "</div>\n",
     "\n",
@@ -85,7 +85,7 @@
     "</div>\n",
     "\n",
     "#### Opensearch backend\n",
-    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Opensearch by downloading the [docker-compose.yaml file](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker-compose.opensearch.yaml) and running:\n",
+    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Opensearch by downloading the [docker-compose.yaml file](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker/docker-compose.opensearch.yaml) and running:\n",
     "\n",
     "```bash\n",
     "docker-compose -f docker-compose.opensearch.yaml up\n",
@@ -93,7 +93,7 @@
     "Once the service is up you can launch the Argilla Server with `python -m argilla`.\n",
     "\n",
     "#### Elasticsearch backend\n",
-    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Elasticsearch by downloading the [docker-compose.yaml](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker-compose.elasticsearch.yaml) and running:\n",
+    "If you don't have another instance of Elasticsearch or Opensearch running, or don't want to keep previous Argilla datasets, you can launch a clean instance of Elasticsearch by downloading the [docker-compose.yaml](https://raw.githubusercontent.com/argilla-io/argilla/develop/docker/docker-compose.elasticsearch.yaml) and running:\n",
     "\n",
     "```bash\n",
     "docker-compose -f docker-compose.elasticsearch.yaml up\n",
@@ -112,7 +112,7 @@
     "In order to migrate from Elasticsearch 7.1.0 and keep your datasets you can follow this process:\n",
     "\n",
     "1. Stop your current Elasticsearch service (we assume a migration for a `docker-compose` setup).\n",
-    "2. Set the the Elasticsearch image to 7.17.x in your `docker-compose`.\n",
+    "2. Set the Elasticsearch image to 7.17.x in your `docker-compose`.\n",
     "3. Start the Elasticsearch service again.\n",
     "4. Once is up and running, stop it again and set the Elasticsearch image to 8.5.x \n",
     "5. Finally, start again the Elasticsearch service. Data should be migrated properly."
@@ -127,14 +127,14 @@
     "### Add vectors to records\n",
     "The first and most important thing to do before leveraging semantic search is to turn text into a numerical representation: a vector. In practical terms, you can think of a vector as an array or list of numbers. You can associate this list of numbers with an Argilla Record by using the aforementioned `vectors` field. But the question is: **how do you create these vectors?** \n",
     "\n",
-    "Over the years, many approaches have been used to turn text into numerical representations. The goal is to \"encode\" meaning, context,  topics, etc.. This can be used to find \"semantically\" similar text. Some of these approaches are: *LSA* (Latent Semantic Analysis), *tf-idf*, *LDA* (Latent Dirichlet Allocation), or *doc2Vec*. More recent methods fall in the category of \"neural\" methods, which leveragage the power of large neural networks to *embed* text into dense vectors (a large array of real numbers). These methods have demonstrated a great ability of capturing semantic features. These methods are powering a new wave of technologies that fall under categories like neural search, semantic search, or vector search. Most of these methods involve using a large language model to encode the full context of a textual snippet, such as a sentence, a paragraph, and more lately larger documents.\n",
+    "Over the years, many approaches have been used to turn text into numerical representations. The goal is to \"encode\" meaning, context,  topics, etc.. This can be used to find \"semantically\" similar text. Some of these approaches are *LSA* (Latent Semantic Analysis), *tf-idf*, *LDA* (Latent Dirichlet Allocation), or *doc2Vec*. More recent methods fall in the category of \"neural\" methods, which leverage the power of large neural networks to *embed* text into dense vectors (a large array of real numbers). These methods have demonstrated a great ability to capture semantic features. These methods are powering a new wave of technologies that fall under categories like neural search, semantic search, or vector search. Most of these methods involve using a large language model to encode the full context of a textual snippet, such as a sentence, a paragraph, and more lately larger documents.\n",
     "\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
     "\n",
     "Note\n",
     "   \n",
-    "In the context of Argilla, we intentionally use the term `vector` in favour of `embedding` to emphasize that users can leverage methods other than neural, which might be cheaper to compute, or be more useful for their use cases.\n",
+    "In the context of Argilla, we intentionally use the term `vector` in favor of `embedding` to emphasize that users can leverage methods other than neural, which might be cheaper to compute or be more useful for their use cases.\n",
     "</div>\n",
     "\n",
     "\n",
@@ -335,13 +335,13 @@
    "source": [
     "#### OpenAI `Embeddings`\n",
     "\n",
-    "OpenAI provides a API endpoint called [Embeddings](https://beta.openai.com/docs/api-reference/embeddings) to get a vector representation of a given input that can be easily consumed by machine learning models and algorithms. \n",
+    "OpenAI provides an API endpoint called [Embeddings](https://beta.openai.com/docs/api-reference/embeddings) to get a vector representation of a given input that can be easily consumed by machine learning models and algorithms. \n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "Warning\n",
     "\n",
-    "Due to the vector dimension limitation of Elasticsearch and Opensearch Lucene-based engines, currently you can only use the `text-similarity-ada-001` model which produces vectors of `1024` dimensions.\n",
+    "Due to the vector dimension limitation of Elasticsearch and Opensearch Lucene-based engines, currently, you can only use the `text-similarity-ada-001` model which produces vectors of `1024` dimensions.\n",
     "    \n",
     "</div>\n",
     "\n",
@@ -499,14 +499,14 @@
    "source": [
     "#### co:here `Co.Embed`\n",
     "\n",
-    "[Co:here Co.Embed](https://docs.cohere.ai/reference/embed) is an API endpoint by Cohere which takes a piece of text and turns it into a vector embedding. \n",
+    "[Co:here Co.Embed](https://docs.cohere.ai/reference/embed) is an API endpoint by Cohere that takes a piece of text and turns it into a vector embedding. \n",
     "\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
     "\n",
     "Warning\n",
     "\n",
-    "Due to the vector dimension limitation of Elasticsearch and Opensearch Lucene-based engines, currently you can only use the `small` model which produces vectors of `1024` dimensions.\n",
+    "Due to the vector dimension limitation of Elasticsearch and Opensearch Lucene-based engines, currently, you can only use the `small` model which produces vectors of `1024` dimensions.\n",
     "    \n",
     "</div>\n",
     "\n",
@@ -514,7 +514,7 @@
     "\n",
     "To run the code below you need to install `cohere` and `datasets` with pip: `pip install cohere datasets`.\n",
     "\n",
-    "You also need to setup your Cohere API key as shown below."
+    "You also need to set up your Cohere API key as shown below."
    ]
   },
   {
@@ -580,7 +580,7 @@
     "\n",
     "#### Argilla Python client\n",
     "\n",
-    "The `rg.load` methods includes a `vector` parameter which can be used to retrieve similar records to a given vector, and a `limit` parameter to indicate the number of records to be retrieved. This parameter accepts a tuple with the key of the target vector (this should match with one of the keys of the `vectors` dictionary) and the query vector itself.\n",
+    "The `rg.load` method includes a `vector` parameter which can be used to retrieve similar records to a given vector, and a `limit` parameter to indicate the number of records to be retrieved. This parameter accepts a tuple with the key of the target vector (this should match with one of the keys of the `vectors` dictionary) and the query vector itself.\n",
     "\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
@@ -803,7 +803,7 @@
    "source": [
     "##### Using the `query` param\n",
     "\n",
-    "The `vector` param can be combined with the `query` param to combine vector search with traditional search. Let's see a further example: find the most similar records with the `card_arrival` label. To do this we use the Query string DSL described in the [Queries guide](./query_datasets.md).\n"
+    "The `vector` param can be combined with the `query` param to combine vector search with traditional search. Let's see a further example: find the most similar records with the `card_arrival` label. To do this we use the Query string DSL described in the [Queries guide](../filter_dataset.md).\n"
    ]
   },
   {
@@ -834,7 +834,7 @@
    "id": "d5390877-9521-45ea-b476-bd2928185adc",
    "metadata": {},
    "source": [
-    "In the table below we can see that the first example is a mixed between a `lost_or_stolen` and `card_arrival`."
+    "In the table below we can see that the first example is a mix between a `lost_or_stolen` and `card_arrival`."
    ]
   },
   {
