--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-openai-rag-feedback.ipynb
@@ -17,15 +17,15 @@
         "- Generating potential questions with LlamaIndex to build a training and test set.\n",
         "- Building a dataset for collecting human written responses with Argilla.\n",
         "- Fine-tuning GPT3.5-turbo with high-quality data.\n",
-        "- Evaluating the fine-tuned model vs the base model with human preference data from Argilla.\n",
+        "- Evaluating the fine-tuned model vs. the base model with human preference data from Argilla.\n",
         "\n",
         "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: \n",
         "\n",
-        "1. Gathering **high quality data for fine-tuning**, \n",
+        "1. Gathering **high-quality data for fine-tuning**, \n",
         "2. Gathering **human feedback for evaluation of LLM applications**.\n",
         "\n",
         "\n",
-        "Given the ongoing debate between Retrieval Augmented Generation (RAG) and fine-tuning, we selected a real-world RAG use case to demonstrate how fine-tuning enhances the style, utility, and relevance of responses within a RAG application. The resulting system will be Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7). \n",
+        "Given the ongoing debate between Retrieval Augmented Generation (RAG) and fine-tuning, we selected a real-world RAG use case to demonstrate how fine-tuning enhances the style, utility, and relevance of responses within a RAG application. The resulting system will be a Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7). \n",
         "\n",
         "The screenshot below displays the evaluation dataset, termed the \"human preference dataset.\" In it, `response-a` is produced by the fine-tuned model, while `response-b` comes from the base GPT-3.5 model. With just minor fine-tuning and without altering the system message, we've directed the LLM's behavior towards generating responses that are more helpful, faithful, friendly, and aligned with our brand.\n",
         "\n",
@@ -39,16 +39,16 @@
         "\n",
         "\n",
         "\n",
-        "By the end of the tutorial, you'll be using a fine-tuned model for RAG and have an human evaluation workflow in place to continously evaluate your LLM application (see below for a comparison of the base gpt3.5 vs the fine-tuned gpt3.5 for this application).\n",
+        "By the end of the tutorial, you'll be using a fine-tuned model for RAG and have a human evaluation workflow in place to continuously evaluate your LLM application (see below for a comparison of the base gpt3.5 vs. the fine-tuned gpt3.5 for this application).\n",
         "\n",
-        "![Fine-tuned model vs base model](/_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
+        "![Fine-tuned model vs. base model](/_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
         "\n",
         "\n",
         "Let's get started!\n",
         "\n",
         "## Setup\n",
         "\n",
-        "For running this tutorial, you need to [install and launch Argilla](https://docs.argilla.io/en/latest/getting_started/quickstart_installation.html), as well as some other packages."
+        "To run this tutorial, you need to [install and launch Argilla](https://docs.argilla.io/en/latest/getting_started/quickstart_installation.html), as well as some other packages."
       ]
     },
     {
@@ -130,7 +130,7 @@
         "\n",
         "We generate responses for the generated questions using [this dataset about Argilla Cloud](https://huggingface.co/datasets/argilla/cloud_assistant_questions). We have generated this dataset using a source document and LlamaIndex's question generator (see appendix about how to generate these questions).\n",
         "\n",
-        "If you want to skip this process (it will take several minutes), we have shared the resulting [dataset on Hugging Face](https://huggingface.co/datasets/argilla/rg_customer_assistant).\n",
+        "If you want to skip this process (it will take several minutes), we have shared the resulting [dataset on Hugging Face](https://huggingface.co/datasets/argilla/customer_assistant).\n",
         "\n",
         "\n",
         "\n"
@@ -221,10 +221,10 @@
         "## Create Argilla dataset and collect feedback\n",
         "\n",
         "\n",
-        "We setup an Argilla Dataset for gathering human feedback.\n",
+        "We set up an Argilla Dataset for gathering human feedback.\n",
         "\n",
         "\n",
-        "For fine-tuning, we need to setup a text question to gather the human written or edited responses. This data is known as completion or demonstration data.\n",
+        "For fine-tuning, we need to set up a text question to gather the human written or edited responses. This data is known as completion or demonstration data.\n",
         "\n",
         "Additionally, leveraging the multi-aspect feedback capabilities of Argilla, we set up two additional feedback dimensions to rate the relevance of the question (as they're synthetic they might be irrelevant or bad quality) and the quality of the context retrieved from our retriever component (can be used to improve the RAG configuration).\n",
         "\n"
@@ -255,7 +255,7 @@
         "id": "btwbDF6_PayX"
       },
       "source": [
-        "We use the questions, context, and generated responses to build our feedback records. We pre-fill the responses in the UI with OpenAI's responses using `suggestions` and ask our labelers to edit them if neccesary."
+        "We use the questions, context, and generated responses to build our feedback records. We pre-fill the responses in the UI with OpenAI's responses using `suggestions` and ask our labelers to edit them if necessary."
       ]
     },
     {
@@ -311,7 +311,7 @@
         "\n",
         "We now read the responses from Argilla and prepare the dataset for fine-tuning following the [fine-tuning format from OpenAI guides](https://platform.openai.com/docs/guides/fine-tuning).\n",
         "\n",
-        "We use the a quick adaptation of LlamaIndex's `TEXT_QA_PROMPT` system prompt and the fine-tuned responses from our Argilla dataset."
+        "We use the quick adaptation of LlamaIndex's `TEXT_QA_PROMPT` system prompt and the fine-tuned responses from our Argilla dataset."
       ]
     },
     {
@@ -343,7 +343,7 @@
         "Query: {query_str}\n",
         "Answer:\n",
         "\"\"\"\n",
-        "# adapation from LlamaIndex's TEXT_QA_SYSTEM_PROMPT\n",
+        "# adaptation from LlamaIndex's TEXT_QA_SYSTEM_PROMPT\n",
         "system_prompt = \"\"\"You are an expert customer service assistant for the Argilla Cloud product that is trusted around the world.\n",
         "Always answer the query using the provided context information, and not prior knowledge.\n",
         "Some rules to follow:\n",
@@ -390,7 +390,7 @@
         "id": "SVvdU9EqVWSR"
       },
       "source": [
-        "## Fine-tune GPT3.5 with high quality feedback\n",
+        "## Fine-tune GPT3.5 with high-quality feedback\n",
         "\n",
         "\n",
         "We fine-tune `gpt-3.5-turbo` with the exported dataset."
@@ -445,7 +445,7 @@
       "source": [
         "## Evaluating base vs fine-tuned with human preference data\n",
         "\n",
-        "We setup a new feedback dataset for gathering human feedback to evaluate the fine-tuned model against the base model, using the test dataset.\n",
+        "We set up a new feedback dataset for gathering human feedback to evaluate the fine-tuned model against the base model, using the test dataset.\n",
         "\n",
         "There are many ways to collect feedback for this phase. The most suitable in this case is human preference data over responses from the two models: *asking our labelers which response is the most accurate and helpful*. We can easily do this with Argilla's `RankingQuestion`.\n",
         "\n",
@@ -454,7 +454,7 @@
         "\n",
         "### Create dataset and collect feedback\n",
         "\n",
-        "We setup and publish a new dataset with a `RankingQuestion` and `TextQuestion`, showing our labelers the `user-message` and two responses (from the base and the fine-tuned models)."
+        "We set up and publish a new dataset with a `RankingQuestion` and `TextQuestion`, showing our labelers the `user-message` and two responses (from the base and the fine-tuned models)."
       ]
     },
     {
@@ -541,7 +541,7 @@
       "source": [
         "An important step here is to randomize the order in which responses are shown.\n",
         "\n",
-        "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or making it evident to users there are two clearly different models.\n",
+        "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or make it evident to users that there are two obviously different models.\n",
         "\n",
         "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-a` and `response-b`. When collecting the responses, we'll use this metadata to map the ranking with each model."
       ]
@@ -599,7 +599,7 @@
         "\n",
         "For the tutorial, we only have one user but Argilla Feedback is fully multi-user, which means you can collect feedback from several users for each data point, increasing the quality of the evaluation. \n",
         "\n",
-        "You can read more about multi-user scenarios and built-in unification methods [on this guide](/practical_guides/collect_responses.html).\n",
+        "You can read more about multi-user scenarios and built-in unification methods [on this guide](/practical_guides/collect_responses.md).\n",
         "\n",
         "With a very small evaluation set, we can see that the fine-tuned model responses are preferred ~60% of the time, 3x over the base model, and they are both equally good or bad ~20% of the time. \n",
         "\n",
@@ -694,7 +694,7 @@
         "## Appendix: Generating questions with Llama Index\n",
         "\n",
         "\n",
-        "We use the `DatasetGenerator` from Llama Index for generating a set of questions using a document about Argilla Cloud."
+        "We use the `DatasetGenerator` from Llama Index to generate a set of questions using a document about Argilla Cloud."
       ]
     },
     {
